--- a/css/scroll.css
+++ b/css/scroll.css
@@ -36,3 +36,12 @@
     background-color: #337AB7;
 }
 
+@-ms-viewport { 
+ width: device-width;
+}
+@-o-viewport { 
+ width: device-width;
+}
+@viewport { 
+ width: device-width;
+}
