--- a/css/block.css
+++ b/css/block.css
@@ -1,6 +1,11 @@
 * {
    box-sizing: border-box;
 }
+
+img {
+   width: 100%;
+   height: 400px;
+}
 .border {
    width: 300px;
    margin: 0 auto;
